--- a/index.css
+++ b/index.css
@@ -48,3 +48,15 @@
     cursor: pointer;
     margin: 10px;
 }
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    margin: 20px;
+    width: 200px;
+    height: 400px;
+    background-color: lightgray;
+}
