--- a/index.css
+++ b/index.css
@@ -1,62 +1,3 @@
-.header {
-    display : flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-
-.logo {
-    width: 100px;
-}
-
-.nav-items > ul {
-    font-size: large;
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-items > ul > li {
-    padding: 10px;
-    margin: 10px;
-}
-
-.search {
-    padding: 10px;
-}
-
-.res-card {
-    margin: 5px;
-    padding: 10px;
-    width: 200px;
-    background-color: whitesmoke;
-}
-
-.res-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.res-card:hover {
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-.res-logo {
-    width: 190px;
-}
-
-.filter-btn {
-    cursor: pointer;
-    margin: 10px;
-}
-
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card {
-    margin: 20px;
-    width: 200px;
-    height: 400px;
-    background-color: lightgray;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
